[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-graphs"
version = "0.0.7"
description = "Graph Neural Network library made for Apple Silicon"
authors = [{name="mlx-graphs contributors"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python",
]
dependencies = [
    "mlx>=0.18.0",
    "numpy>=1.26.3",
    "requests>=2.31.0",
    "fsspec>=2024.2.0",
    "tqdm>=4.66.1",
    "mlx-lm>=0.26.2",
]

[project.optional-dependencies]
dev = [
  "pre-commit==3.6.0",
]

[project.urls]
Homepage = "https://mlx-graphs.github.io/mlx-graphs/"
Documentation = "https://mlx-graphs.github.io/mlx-graphs/"
Repository = "https://github.com/mlx-graphs/mlx-graphs"
Issues = "https://github.com/mlx-graphs/mlx-graphs/issues"


[tool.ruff]
line-length = 88
indent-width = 4
select = ["F", "E", "W", "I001"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
